Fix paragraph overflow

--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,6 @@ body {
   margin: 15px 0px 0px 17px;
 }
 
-h3 {
-
-}
-
 .header {
   height: 75px;
   text-align: left;
@@ -66,7 +62,6 @@ img {
 }
 
 .paragraph {
-  width: 75vw;
   text-align: left;
   margin: 0 auto 70px auto;
   font-family: "Source Serif 4", serif;
@@ -87,7 +82,7 @@ img {
 .content {
   margin: 0 auto;
   text-align: center;
-  width: 85vw;
+  width: 85%;
 }
 
 #welcome {
